fixed navbar brand to show on mobile

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -127,10 +127,6 @@ footer {
     right: 0px;
 }
 
-.center-navbar {
-		font-size: 200%;
-}
-
 .add-menu-item {
   max-width: 500px;
   margin: 0 auto;
